--- a/src/app/concepts/concept-listing/concept-listing.component.html
+++ b/src/app/concepts/concept-listing/concept-listing.component.html
@@ -1,10 +1,5 @@
-<div class="panel-body">
-  <div class="tab-content">
+<div>
 
-    <div *ngFor="let concept of concepts ">
-      <app-concept-card [concept]="concept"></app-concept-card>
-    </div>
     <router-outlet></router-outlet>
 
-  </div>
 </div>
