--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="col-sm-8 col-sm-offset-2" style="padding-top: 60px;">
+<div class="col-sm-12" style="padding-top: 60px;">
     <router-outlet></router-outlet>
 </div>
