--- a/src/app/concepts/concept-home/concept-home.component.html
+++ b/src/app/concepts/concept-home/concept-home.component.html
@@ -1,37 +1,41 @@
 <div class="panel panel-primary">
+
     <div class="panel-heading">
-
+        <h3>
         {{concept.ConceptTitle}}
-
+        </h3>
     </div>
 
     <div class="panel-body">
         {{concept.ConceptDescription}}
         <hr/>
-        <div>
-            <h5> Particiapting Institutions</h5>
-        </div>
-        <ng-template [ngIf]="universities">
+        <ng-template [ngIf]="loggedInUser.isAdmin()">
+
+            <div>
+                <h4> Particiapting Institutions</h4>
+            </div>
+            <ng-template [ngIf]="universities">
 
 
-            <p-accordion [multiple]="true">
-                <div *ngFor="let university of universities ">
+                <p-accordion [multiple]="true">
+                    <div *ngFor="let university of universities ">
 
-                    <p-accordionTab [selected]="true">
-                        <p-header>
-                            {{university.Name}}
-                        </p-header>
-                        <div *ngFor="let project of university.projects ">
-                            <app-project-card [project]="project"></app-project-card>
-                        </div>
-                    </p-accordionTab>
-                </div>
-            </p-accordion>
-        </ng-template>
+                        <p-accordionTab [selected]="true">
+                            <p-header>
+                                {{university.Name}}
+                            </p-header>
+                            <div *ngFor="let project of university.projects ">
+                                <app-project-card [project]="project"></app-project-card>
+                            </div>
+                        </p-accordionTab>
+                    </div>
+                </p-accordion>
+            </ng-template>
 
-        <ng-template [ngIf]="!universities">
-            <div class="alert alert-info" role="alert">No particpants yet</div>
+            <ng-template [ngIf]="!universities">
+                <div class="alert alert-info" role="alert">No particpants yet</div>
 
+            </ng-template>
         </ng-template>
     </div>
 
