--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-      <a class="navbar-brand navbar-center" href="#">PRAXIM LEARNING</a>
+      <!--<a class="navbar-brand navbar-center" href="#">PRAXIM LEARNING</a>-->
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ng-template [ngIf]="authenticationService.isAuthenticated()">
@@ -66,7 +66,7 @@
           </ul>
         </li>
         <li *ngIf="!authenticationService.isAuthenticated()">
-          <a href routerLink="/login">Log In
+          <a href routerLink="/login">LOGIN
             
           </a>
         </li>
@@ -76,9 +76,3 @@
     </div>
   </div>
 </nav>
-<div class="container-fluid">
-  <div class="row">
-
-
-  </div>
-</div>
