--- a/src/app/projects/project-card/project-card.component.html
+++ b/src/app/projects/project-card/project-card.component.html
@@ -13,6 +13,24 @@
       life the nature of the family business becomes clear. The business of the family is just like the head of the family,
       kind and benevolent to those who give respect, but given to ruthless violence whenever anythi {{ project.ProjectDescription}}
     </div>
+
+    <div>
+      <p-accordion>
+
+        <p-accordionTab>
+          <p-header>
+            Team Members
+          </p-header>
+          <div *ngFor="let student of project.students ">
+
+          </div>
+          <ng-template [ngIf]="!project.students">
+            Members not assigned yet!
+          </ng-template>
+        </p-accordionTab>
+      </p-accordion>
+    </div>
+
     <div style="margin-top:10px;">
       <a pButton type="button" label="Go to project home" routerLink='/projects/{{project.ProjectId}}' class="ui-button-info"></a>
     </div>
