--- a/src/app/projects/project-edit/project-edit.component.css
+++ b/src/app/projects/project-edit/project-edit.component.css
@@ -1,15 +1,18 @@
-.wid200{
-    width: 200px;
+
+.ui-autocomplete-multiple-container{
+        width: 100%;
+
 }
+.ui-autocomplete-input-token{
+        width: 100%;
 
-
-
+}
 .ui-autocomplete-input-token input {
     border: 0 none;
-    width: 100em;
+    width: 100%;
     outline: medium none;
     background-color: transparent;
-    margin: 0;
+    margin: 0px 0px 0px 5px;
     padding: 0;
     box-shadow: none;
     -moz-border-radius: 0;
