Adding clarity design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<div class="col-sm-12" style="padding-top: 60px;">
-    <router-outlet></router-outlet>
-</div>
+<div class="main-container">
+
+    <app-header></app-header>
+    <!-- <div class="progress loop">
+        <progress></progress>
+    </div>
+    -->
+
+    <div class="content-container">
+
+            <router-outlet></router-outlet>
+    </div>
