--- a/src/app/concepts/concept-listing/concept-available-listing.component.html
+++ b/src/app/concepts/concept-listing/concept-available-listing.component.html
@@ -1,15 +1,17 @@
-<div class="panel panel-primary">
-  <alert></alert>
+<div class="dox-wrapper">
+  <div class="dox-wrapper dox-header new-component-layout">
 
-  <div class="panel-heading">
-    {{header}}
+    <section>
+      <h5>{{header}}</h5>
+    </section>
   </div>
-  <div class="panel-body">
 
-    <div *ngFor="let concept of concepts ">
-      <app-concept-card [concept]="concept"></app-concept-card>
+  <section class="dox-content">
+    <div class="content-wrapper">
+      <div *ngFor="let concept of concepts ">
+        <app-concept-card [concept]="concept"></app-concept-card>
+      </div>
+      <router-outlet></router-outlet>
     </div>
-    <router-outlet></router-outlet>
-
-  </div>
+  </section>
 </div>
