--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-  <app-header></app-header>
-</div>
-<div class="row" class="concepts">
+<div class="row">
+  <div class="col-md-12">
   <a routerLink='/concepts/new' class="btn btn-success" style="margin-bottom:10px;" *ngIf="loggedInUser.isAdmin()">Create New Concept</a>
   <p-confirmDialog></p-confirmDialog>
   <router-outlet></router-outlet>
-
 </div>
+</div></div>
