--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,66 +1,26 @@
-<app-header>
-</app-header>
-<div class="col-md-7 col-md-offset-3">
-    <div class="panel panel-success">
-        <div class="panel-heading">Member Login</div>
 
-        <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
-            <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 5px">
+<div class="login-wrapper">
+    <form class="login" name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm">
+        <label class="title">
+            <h3 class="welcome">Welcome to</h3>
+            Praxim Learning
+            <h5 class="hint">Use your Username and password to sign in or create one now</h5>
+        </label>
+        <div class="login-group">
 
-                <div class="ui-grid-col-4" style="text-align:center;">
-                    Email address
-                </div>
-                <div class="ui-grid-col-8">
-                    <input type="email" placeholder="Email required" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel"
-                        required email="true" />
-                </div>
-                <div class="ui-grid-col-4">
-                    <div class="ui-message ui-messages-error ui-corner-all" *ngIf="f.submitted && !username.valid">
-                        <i class="fa fa-close"></i> Valid Email is required
-                    </div>
-                </div>
+            <input class="username" type="email" placeholder="Email" class="form-control" name="username" [(ngModel)]="model.username"
+                #username="ngModel" required email="true" />
+            <input type="password" placeholder="Password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel"
+                required />
+            <div class="checkbox">
+                <input type="checkbox" id="rememberme">
+                <label for="rememberme">
+                    Remember me
+                </label>
             </div>
-            <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 5px">
-
-                <div class="ui-grid-col-4" style="text-align:center;">
-                    Password
-                </div>
-                <div class="ui-grid-col-8">
-                    <input type="password" placeholder="Password required" class="form-control" name="password" [(ngModel)]="model.password"
-                        #password="ngModel" required />
-                </div>
-                <div class="ui-grid-col-4">
-                    <div class="ui-message ui-messages-error ui-corner-all" *ngIf="f.submitted && !password.valid">
-                        <i class="fa fa-close"></i> Password is required
-                    </div>
-                </div>
-            </div>
-             <div class="ui-grid-row" >
-                 <div class="ui-grid-col-4" style="text-align:center;">
-                    &nbsp;
-                </div>
-                <div class="ui-grid-col-8">
-                <a [routerLink]="['/register']">Forgot password</a> 
-                </div>
-            </div>
-            <div class="ui-grid-row" style="margin-top:5px;">
-                 <div class="ui-grid-col-2" style="text-align:center;">
-                    &nbsp;
-                </div>
-                <div class="ui-grid-col-8">
-
-                    <button [disabled]="loading" class="btn btn-primary btn-lg btn-block">Login</button>
-                </div>
-            </div>
-            <div class="ui-grid-row" style="margin-top:5px;">
-                 <div class="ui-grid-col-4" style="text-align:center;">
-                    &nbsp;
-                </div>
-                <div class="ui-grid-col-6">
-                <a [routerLink]="['/register']" >Create new accout</a> 
-                </div>
-            </div>
-
-        </form>
-    </div>
+                <alert></alert>
+            <button type="submit" class="btn btn-primary">NEXT</button>
+            <a [routerLink]="['/register']" class="signup">Create new account</a> 
+        </div>
+    </form>
 </div>
